--- a/user-service-dev.yml
+++ b/user-service-dev.yml
@@ -4,3 +4,10 @@ token:
 
 gateway:
   ip: 192.168.1.4
+
+spring:
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:testdb
+    username: sa
+    password: 1234
