--- a/user-service-dev.yml
+++ b/user-service-dev.yml
@@ -5,6 +5,9 @@ token:
 gateway:
   ip: 192.168.1.4
 
+order_service:
+  url: http://localhost:8000/order-service/%s/orders
+
 spring:
   datasource:
     driver-class-name: org.h2.Driver
