--- a/user-service-dev.yml
+++ b/user-service-dev.yml
@@ -6,7 +6,7 @@ gateway:
   ip: 192.168.1.4
 
 order_service:
-  url: http://localhost:8000/order-service/%s/orders
+  url: http://ORDER-SERVICE/order-service/%s/orders
 
 spring:
   datasource:
