--- a/user-service-dev.yml
+++ b/user-service-dev.yml
@@ -7,6 +7,8 @@ gateway:
 
 order_service:
   url: http://ORDER-SERVICE/order-service/%s/orders
+  exception:
+    orders_is_empty: order is empty
 
 spring:
   datasource:
